--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head><meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Home</title></head><body>
+<html><head>
+<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Home</title></head><body>
 <table style="text-align: left; width: 1621px; height: 794px;" border="1" cellpadding="2" cellspacing="2">
   <tbody>
     <tr>
@@ -15,7 +16,8 @@
       <td style="vertical-align: top; height: 562px; width: 198px; text-align: right;"><br>
       <big><big><big><a href="list%20of%20news%20link.html" target="_blank">List of anime</a><br>
       </big></big></big>
-      <hr style="width: 100%; height: 2px;"><big><big><big>&nbsp;</big></big></big><br>
+      <hr style="width: 100%; height: 2px;"><a href="Fom.html"><big><big><big>&nbsp;Fom</big></big></big></a><br>
+      <hr style="width: 100%; height: 2px;">
       </td>
       <td style="vertical-align: top; height: 562px; width: 1391px;"><br>
       </td>
