--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
+
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Home</title></head><body>
-<table style="text-align: left; width: 1621px; height: 794px;" border="1" cellpadding="2" cellspacing="2">
+<table style="text-align: left; width: 1621px; height: 818px;" border="1" cellpadding="2" cellspacing="2">
   <tbody>
     <tr>
       <td style="vertical-align: top; height: 214px; width: 198px;"><img style="width: 203px; height: 213px;" alt="" src="../HU%20TAO%20DARLING/89dd5671b6702fcfa13a40b48c8ae233.jpg"><br>
@@ -17,7 +18,8 @@
       <big><big><big><a href="list%20of%20news%20link.html" target="_blank">List of anime</a><br>
       </big></big></big>
       <hr style="width: 100%; height: 2px;"><a href="Fom.html"><big><big><big>&nbsp;Fom</big></big></big></a><br>
-      <hr style="width: 100%; height: 2px;">
+      <hr style="width: 100%; height: 2px;"><a href="English%20spelling/Comman.html" target="_top"><big><big><big>English spelling</big></big></big></a><br>
+<hr style="width: 100%; height: 2px;">
       </td>
       <td style="vertical-align: top; height: 562px; width: 1391px;"><br>
       </td>
